0.2.17 - Ground items highlighting, farming fixes,